pozícia fixed a z-index na 1000 kvoli viditelnosti

--- a/assets/scss/components/_toggle-button.scss
+++ b/assets/scss/components/_toggle-button.scss
@@ -4,7 +4,8 @@
 .toggle-container {
     position: fixed;
     top: 2.5em;
-    right: 1em;
+	right: 1em;
+	z-index: 1000;
 }
 
 input[type=checkbox]{
